# desafio-eng-de-dados-prouni

./: .gitignore  LICENSE  README.md  arquivo_tratado_sem_acentos.csv  dados_tratados_sem_acento.py  pyproject.toml  tratamento.py
Analytics/: 01_count_by_sex.py  02_count_by_race.py  03_percentage_dist_by_gender.py  04_percentage_dist_by_race.py  05_avg_age_by_sex_and_ race.py  06_dist_beneficiaries_type_of_scholarship.py  07_dist_beneficiaries_educational_institution.py  08_dist_sex_by_region_and_state.py  09_dist_race_by_region_and_state copy.py  09_dist_race_by_region_and_state.py
Scripts/: data_loader.py  database_connection.py  queries.py  script_queries.py  tratamento.py
scripts/: script.py
visualization/: grafico1.py  grafico2.py  grafico3.py  grafico4.py  grafico5.py  grafico6.py  grafico7.py  grafico8.py  grafico9.py  visual.py
