[tool.poetry]
name = "desafio-eng-de-dados-prouni"
version = "0.1.0"
description = "\"Desafio: Engenharia de Dados\""
authors = ["janascher <janainascher@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "desafio_eng_de_dados_prouni"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
plotly = "^5.15.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
